# wavefront

./: .editorconfig  .gitignore  README.md  cc.placid.Wavefront.json  meson.build
data/: cc.placid.Wavefront.desktop.in  cc.placid.Wavefront.gschema.xml  cc.placid.Wavefront.metainfo.xml.in  cc.placid.Wavefront.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: config.h.in  main.c  meson.build  style.css  wavefront.gresource.xml  wf-application.c  wf-application.h  wf-player.c  wf-player.h  wf-seek-bar.c  wf-seek-bar.h  wf-spectra.c  wf-spectra.h  wf-waveform.c  wf-waveform.h  wf-window.c  wf-window.h  wf-window.ui
src/resources/: style.css  wavefront.gresource.xml
src/resources/ui/: wf-window.ui
